hphp/hack/test/typecheck/infinite_loop_terminal_bad.php.exp
File "infinite_loop_terminal_bad.php", line 3, characters 10-10:
Invalid return type (Typing[4336])
  File "infinite_loop_terminal_bad.php", line 3, characters 15-17:
  Expected `int`
  File "infinite_loop_terminal_bad.php", line 3, characters 10-10:
  But got `void` because this function does not always return a value
